--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
+      "css": ["content.css"],
       "js": ["constants.js", "content.js"],
       "all_frames": true,
       "run_at": "document_idle"
