--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Video Speed Controller",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Control HTML5 video speed and hold a key to temporarily speed up HTML5 videos.",
   "icons": {
     "16": "icons/icon16.png",
@@ -9,7 +9,9 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": ["storage"],
+  "permissions": [
+    "storage"
+  ],
   "action": {
     "default_title": "Hold to Speed Up Video",
     "default_popup": "popup.html",
@@ -20,9 +22,16 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "css": ["content.css"],
-      "js": ["constants.js", "content.js"],
+      "matches": [
+        "<all_urls>"
+      ],
+      "css": [
+        "content.css"
+      ],
+      "js": [
+        "constants.js",
+        "content.js"
+      ],
       "all_frames": true,
       "run_at": "document_idle"
     }
